--- a/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.html
+++ b/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.html
@@ -1,9 +1,73 @@
+<!--
+  * Copyright 2015 Hippo B.V. (http://www.onehippo.com)
+  *
+  * Licensed under the Apache License, Version 2.0 (the  "License");
+  * you may not use this file except in compliance with the License.
+  * You may obtain a copy of the License at
+  *
+  * http://www.apache.org/licenses/LICENSE-2.0
+  *
+  * Unless required by applicable law or agreed to in writing, software
+  * distributed under the License is distributed on an "AS IS" BASIS,
+  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  * See the License for the specific language governing permissions and
+  * limitations under the License.
+-->
 <html xmlns:wicket="http://wicket.apache.org/">
 <wicket:extend>
-
-    <div class="folderctxmenus-dialog-panel">
-
-    </div>
-
+  <form wicket:id="form">
+    <table class="hippo-window-form folderctxmenus-dialog">
+      <tr>
+        <td>
+          <div class="field-label">
+            Source Folder:
+          </div>
+        </td>
+        <td>
+          <div class="field-value">
+            <input type="text" wicket:id="sourceFolderPathDisplay" />
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="field-label">
+            Destination:
+          </div>
+        </td>
+        <td>
+          <div class="field-value">
+            <input type="text" wicket:id="destinationFolderPathDisplay" /><br/>
+            <div wicket:id="folderTree" class="folder-tree">Tree goes here</div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="field-label">
+            Folder Name:
+          </div>
+        </td>
+        <td>
+          <div class="field-value">
+            <input type="text" wicket:id="newFolderName" />
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="field-label">
+            URL Name:
+          </div>
+        </td>
+        <td>
+          <div class="field-value">
+            <input type="text" wicket:id="newFolderUrlName" />
+            <a href="#" wicket:id="editFolderUrlName">Edit</a>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </form>
 </wicket:extend>
 </html>
