--- a/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.html
+++ b/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.html
@@ -41,7 +41,7 @@
       <tr>
         <td>
           <div class="field-label">
-            <wicket:message key="folder.action.label.destination.folder.name">Folder Name:</wicket:message>
+            <wicket:message key="folder.action.label.destination.folder.name">Destination Folder:</wicket:message>
           </div>
         </td>
         <td>
